# keil-bridge

./: .gitignore  README.md  pyproject.toml
keil_bridge/: __init__.py  builder.py  ci_generator.py  cleaner.py  cli.py  cmake_exporter.py  flash_uploader.py  linter.py  lsp_generator.py  map_analyzer.py  parser.py  target_diff.py  vscode_generator.py  watcher.py
tests/: test_parser.py
tests/test_data/: sample.uvprojx
