[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uvision-bridge"
version = "0.1.0"
description = "A modern cross-platform CLI tool to build Keil uVision projects via Wine, generate compile_commands.json, and export to CMake."
readme = "README.md"
authors = [
    { name = "Developer", email = "developer@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Embedded Systems"
]
requires-python = ">=3.8"
dependencies = [
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
uvision-bridge = "keil_bridge.cli:main"
